Update tests for final methods